Bug 1621258 [Wayland] Don't print 'Missing GtkWidget' warning, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D66221